--- a/Facebook/FACEBOOK/app/src/main/res/values/strings.xml
+++ b/Facebook/FACEBOOK/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Facebook</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_homepage">Homepage</string>
 </resources>
